--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Django==5.0.6
+Django==5.1.2
 djangorestframework==3.15.2
 drf-spectacular==0.27.2
-psycopg2-binary==2.9.9     # or mysqlclient==2.2.4 if using MySQL
+psycopg2-binary==2.9.9
 celery==5.4.0
-redis==5.0.7
+redis==5.0.8
 python-dotenv==1.0.1
-beautifulsoup4==4.12.3
-selenium==4.23.1
+selenium==4.24.0
 webdriver-manager==4.0.2
-pydantic==2.8.2
+beautifulsoup4==4.12.3
+pydantic==2.9.2
+python-dateutil==2.9.0.post0
