Indeed Job Scrape

--- a/.env
+++ b/.env
@@ -1,16 +1,19 @@
-DJANGO_SECRET_KEY=change-me
-DJANGO_DEBUG=1
-DJANGO_ALLOWED_HOSTS=*
-
+# --- Postgres ---
 DB_NAME=jobsdb
 DB_USER=jobsuser
 DB_PASSWORD=jobspass
-DB_HOST=postgres
+DB_HOST=localhost
 DB_PORT=5432
 
-REDIS_URL=redis://redis:6379/0
+# --- Redis ---
+REDIS_URL=redis://localhost:6379/0
 
-# Scraper knobs
+# --- Django ---
+DJANGO_SECRET_KEY=change-me
+DJANGO_DEBUG=1
+DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
+
+# Scraper defaults
 SCRAPER_MAX_PAGES=2
 SCRAPER_DELAY_MS=1200
 SELENIUM_HEADLESS=1
