--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,52 @@
 version: "3.9"
+
 services:
-  web:
-    build: .
-    image: job-scraper-web
-    command: bash -lc "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-    ports: ["8000:8000"]
-    env_file: [.env]
-    depends_on: [postgres, redis]
-    volumes: [".:/app"]
-
-  worker:
-    image: job-scraper-web
-    command: bash -lc "celery -A config worker -l info"
-    env_file: [.env]
-    depends_on: [web, redis]
-    volumes: [".:/app"]
-
-  beat:
-    image: job-scraper-web
-    command: bash -lc "celery -A config beat -l info"
-    env_file: [.env]
-    depends_on: [web, redis]
-    volumes: [".:/app"]
-
   postgres:
     image: postgres:16
+    container_name: jobscraper-postgres
+    restart: unless-stopped
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
-    ports: ["5432:5432"]
-    volumes: ["pgdata:/var/lib/postgresql/data"]
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
 
   redis:
     image: redis:7
-    ports: ["6379:6379"]
+    container_name: jobscraper-redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--appendonly", "yes"]
+    volumes:
+      - redisdata:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
+  # Optional admin UI for Postgres
+  pgadmin:
+    image: dpage/pgadmin4:8
+    container_name: jobscraper-pgadmin
+    restart: unless-stopped
+    depends_on:
+      - postgres
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@example.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
+    ports:
+      - "5050:80"
 
 volumes:
   pgdata:
+  redisdata:
